# feebos

./: Cargo.toml  build  readme.md
.cargo/: config.toml
disk-image-builder/: Cargo.toml
disk-image-builder/src/: main.rs
src/: allocator.rs  fixed_buffer.rs  gdt.rs  graphics.rs  graphics_context.rs  interrupts.rs  kernel.rs  lib.rs  main.rs  memory.rs  output_buffer.rs  serial_writer.rs  text_buffer.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
