[package]
name = "feebos"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "disk-image-builder",
]

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[package.metadata.bootloader]
map-physical-memory = true

[dependencies]
bootloader = "0.10.9"
font8x8 = {version = "0.3.1", default-features = false, features = ["unicode"]}
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
spin = "0.9.2"
uart_16550 = "0.2.15"
x86_64 = "0.14.6"
volatile = "0.4.4"
pic8259 = "0.10.2"
pc-keyboard = "0.5.1"
linked_list_allocator = "0.9.1"
